[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.13.0"
error-iter = "0.4"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"

[workspace]
resolver = "2"
members = ["run-wasm"]

